--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">ActivityRecognition</string>
-    <!--
-    This string is used for square devices and overridden by hello_world in
-    values-round/strings.xml for round devices.
-    -->
     <string name="hello_world">Hello Square World!</string>
+
+    <string name="section_activity_recognition">Activity Recognition</string>
+    <string name="section_sensor_record">Sensor Record</string>
+    <string name="section_statistic">Statistic</string>
+
+    <string name="try_again">Try Again</string>
 </resources>
