--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -6,5 +6,16 @@
     <string name="section_sensor_record">Sensor Record</string>
     <string name="section_statistic">Statistic</string>
 
+    <string name="activity_using_computer">Using Computer</string>
+    <string name="activity_washing_dishes">Washing Dishes</string>
+    <string name="activity_driving_car">Driving Car</string>
+    <string name="activity_eating_meal">Eating Meal</string>
+    <string name="activity_playing_video_game">Playing Video Game</string>
+    <string name="activity_having_shower">Having Shower</string>
+    <string name="activity_playing_guitar">Playing Guitar</string>
+    <string name="activity_brushing_teeth">Brushing Teeth</string>
+
     <string name="try_again">Try Again</string>
+    <string name="select_activity">Select activity which you want to record sensor data.</string>
+    <string name="title_activity_test">TestActivity</string>
 </resources>
