--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -22,6 +22,12 @@
     <string name="choose_activity">Choose an activity.</string>
     <string name="title_activity_test">TestActivity</string>
 
+    <string name="sensor_records">Sensor Records</string>
+    <string name="sensor_values">Sensor Values</string>
+    <string name="database_size">Database Size</string>
+
+    <string name="database_size_value">%1$s KB</string>
+
     <string name="text_long_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
     <string name="title_activity_list">ListActivity</string>
 </resources>
