--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="section_sensor_record">Sensor Record</string>
     <string name="section_statistic">Statistic</string>
 
+    <string name="actions">Actions</string>
+
     <string name="activity_icon">Activity Icon</string>
     <string name="activity_using_computer">Using Computer</string>
     <string name="activity_washing_dishes">Washing Dishes</string>
