--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -10,7 +10,9 @@
 
     <string name="click_to_record">Click button to record.</string>
     <string name="click_to_recognize">Click button to start.</string>
+    <string name="predicting">Predicting the activity..</string>
     <string name="recording">Recording..</string>
+    <string name="perform_activity">Click button to stop.</string>
     <string name="choose_activity">Choose an activity.</string>
     <string name="title_activity_test">TestActivity</string>
 
