--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="previous_day">Previous Day</string>
     <string name="next_day">Next Day</string>
     <string name="activity_icon">Activity Icon</string>
+    <string name="predictions">Predictions</string>
 </resources>
