--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="next_day">Next Day</string>
     <string name="activity_icon">Activity Icon</string>
     <string name="predictions">Predictions</string>
+    <string name="no_predictions">No predictions.</string>
 </resources>
