--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="saving">Saving..</string>
     <string name="arff">ARFF</string>
     <string name="smartwatch">Smartwatch</string>
-    <string name="no_connected_smartwatch">No connected smartwatch</string>
+    <string name="couldnt_get_predictions">Couldn\'t get predictions from the smartwatch.</string>
 </resources>
